manifests/thebank.yml
apiVersion: v1
kind: Service
metadata:
  name: thebank
  namespace: thebank
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: thebank
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thebank
  namespace: thebank
spec:
  replicas: 2
  selector:
    matchLabels:
      app: thebank
  template:
    metadata:
      labels:
        app: thebank
    spec:
      containers:
      - name: thebank
        image: acrdwe001.azurecr.io/thebank
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
