manifests/thebank-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: thebank
  namespace: thebank
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - thebank-ingress.westeurope.cloudapp.azure.com
    secretName: thebank-ingress.westeurope.cloudapp.azure.com
  rules:
  - host: thebank-ingress.westeurope.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: thebank
          servicePort: 80
